@@ -1,6 +1,7 @@
 package org.kinotic.structures.internal.api.hooks;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.util.TokenBuffer;
 import org.apache.commons.lang3.Validate;
 import org.kinotic.structures.api.config.StructuresProperties;
 import org.kinotic.structures.api.domain.EntityContext;
@@ -9,6 +10,7 @@ import org.kinotic.structures.api.domain.Structure;
 import org.kinotic.structures.internal.api.hooks.impl.MapUpsertPreProcessor;
 import org.kinotic.structures.internal.api.hooks.impl.PojoUpsertPreProcessor;
 import org.kinotic.structures.internal.api.hooks.impl.RawJsonUpsertPreProcessor;
+import org.kinotic.structures.internal.api.hooks.impl.TokenBufferUpsertPreProcessor;
 import org.kinotic.structures.internal.api.services.EntityHolder;
 
 import java.util.ArrayList;
@@ -19,8 +21,9 @@ import java.util.concurrent.CompletableFuture;
 /**
  * Created by Navíd Mitchell 🤪 on 6/7/23.
  */
-public class DelegatingUpsertPreProcessor implements UpsertPreProcessor<Object, Object> {
+public class DelegatingUpsertPreProcessor implements UpsertPreProcessor<Object, Object, Object> {
 
+    private final TokenBufferUpsertPreProcessor tokenBufferUpsertPreProcessor;
     private final RawJsonUpsertPreProcessor rawJsonUpsertPreProcessor;
     private final MapUpsertPreProcessor mapUpsertPreProcessor;
     private final PojoUpsertPreProcessor pojoUpsertPreProcessor;
@@ -30,10 +33,16 @@ public class DelegatingUpsertPreProcessor implements UpsertPreProcessor<Object, 
                                         Structure structure,
                                         Map<String, DecoratorLogic> fieldPreProcessors) {
 
+        tokenBufferUpsertPreProcessor = new TokenBufferUpsertPreProcessor(structuresProperties,
+                                                                          objectMapper,
+                                                                          structure,
+                                                                          fieldPreProcessors);
+
         rawJsonUpsertPreProcessor = new RawJsonUpsertPreProcessor(structuresProperties,
                                                                   objectMapper,
                                                                   structure,
                                                                   fieldPreProcessors);
+
         mapUpsertPreProcessor = new MapUpsertPreProcessor(structure,
                                                           structuresProperties,
                                                           fieldPreProcessors);
@@ -42,32 +51,34 @@ public class DelegatingUpsertPreProcessor implements UpsertPreProcessor<Object, 
 
     @SuppressWarnings("unchecked")
     @Override
-    public CompletableFuture<EntityHolder> process(Object entity, EntityContext context) {
+    public CompletableFuture<EntityHolder<Object>> process(Object entity, EntityContext context) {
         Validate.notNull(entity, "entity must not be null");
-
-        CompletableFuture<EntityHolder> ret;
-        if(entity instanceof RawJson) {
+        Object ret;
+        if(entity instanceof TokenBuffer) {
+            ret = tokenBufferUpsertPreProcessor.process((TokenBuffer) entity, context);
+        }else if (entity instanceof RawJson){
             ret = rawJsonUpsertPreProcessor.process((RawJson) entity, context);
         } else if(entity instanceof Map) {
             ret = mapUpsertPreProcessor.process((Map<Object, Object>) entity, context);
         } else {
             ret = pojoUpsertPreProcessor.process(entity, context);
         }
-        return ret;
+        return (CompletableFuture<EntityHolder<Object>>) ret;
     }
 
     @SuppressWarnings("unchecked")
     @Override
-    public CompletableFuture<List<EntityHolder>> processArray(Object entities, EntityContext context) {
+    public CompletableFuture<List<EntityHolder<Object>>> processArray(Object entities, EntityContext context) {
         Validate.notNull(entities, "entities must not be null");
 
         Object ret;
-        if(entities instanceof RawJson) {
+        if(entities instanceof TokenBuffer) {
+            ret = tokenBufferUpsertPreProcessor.processArray((TokenBuffer) entities, context);
+        } else if (entities instanceof RawJson) {
             ret = rawJsonUpsertPreProcessor.processArray((RawJson) entities, context);
-        } else if(entities instanceof List) {
-            List<?> list = (List<?>) entities;
+        } else if(entities instanceof List<?> list) {
             if(!list.isEmpty()){
-                Object first = list.get(0);
+                Object first = list.getFirst();
                 if(first instanceof Map){
                     ret = mapUpsertPreProcessor.processArray((List<Map<Object, Object>>) entities, context);
                 }else{
@@ -79,6 +90,6 @@ public class DelegatingUpsertPreProcessor implements UpsertPreProcessor<Object, 
         }else {
             throw new IllegalArgumentException("Unsupported type: " + entities.getClass().getName());
         }
-        return (CompletableFuture<List<EntityHolder>>) ret;
+        return (CompletableFuture<List<EntityHolder<Object>>>) ret;
     }
 }
